dropdown-widget: Fix alignment of disabled option.
The alignment of icon and text of the disabled option in
dropdown widget was somewhow broken due to an extra span
element present which broke the grid layout used for
rendering the icon and text properly.

This also makes the layout consistent with other options
shown with icon.

This was due to e643d7e6fdbc221 which resulted in space
between icon and text. We could have fix that by using
"~" character to remove whitespace in handlebar templates
but making the layout consistent felt a better choice.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -1156,9 +1156,15 @@ div.overlay .flex.overlay-content > .overlay-container,
 .setting-disabled-option {
     color: hsl(38deg 46% 54%);
 
+    .setting-disabled-option-text,
     .setting-disabled-option-icon {
+        color: hsl(38deg 46% 54%);
+    }
+
+    .setting-disabled-option-icon {
+        align-self: center;
         /* Values set to match text alignment in stream dropdown. */
-        padding: 0 5px 0 1px;
+        padding: 0 5px 0 2px;
     }
 }
 
